[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'blacknet'
dynamic = ['version']
authors = [
	{name = 'Romain Bezut', email = 'blacknet@xdec.net'},
]
description = 'Multi-head SSH honeypot system'
readme = 'README.rst'
classifiers = [
	'License :: OSI Approved :: MIT License',
	'Operating System :: POSIX :: Linux',
	'Programming Language :: Python',
	'Programming Language :: Python :: 3',
	'Programming Language :: Python :: 3 :: Only',
	'Programming Language :: Python :: 3.9',
	'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11',
	'Programming Language :: Python :: 3.12',
]
dependencies = [
	'msgpack >= 1.0.0, < 2.0',
	'PyMySQL >= 1.1, < 2.0',
	'paramiko >= 3.0, < 4.0',
]
requires-python = '>=3.9'

[project.scripts]
blacknet-master = 'blacknet.console:run_master'
blacknet-scrubber = 'blacknet.console:run_scrubber'
blacknet-sensor = 'blacknet.console:run_sensor'
blacknet-updater = 'blacknet.console:run_updater'

[tool.setuptools.dynamic]
version = {attr = 'blacknet.version.version'}

[tool.setuptools.packages.find]
include = [
	'blacknet',
	'blacknet.console',
]

[tool.setuptools.package-data]
blacknet = ['py.typed']

[tool.coverage.paths]
source = ['blacknet/']

[tool.coverage.report]
precision = 2
ignore_errors = true
include = ['blacknet/*']
exclude_lines = [
	'pragma: no cover',
	'raise NotImplementedError',
	'raise NotImplemented',
	'if TYPE_CHECKING:',
	'@overload',
]

[tool.coverage.run]
source = ['blacknet']
branch = true

[tool.ruff]
include = ['blacknet/**/*.py', 'runtests.py']
indent-width = 4
line-length = 95
output-format = 'grouped'

[tool.ruff.format]
indent-style = 'space'
line-ending = 'lf'
quote-style = 'double'
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
	'A',      # flake8-builtins
	'ASYNC',  # flake8-async
	'B',      # flake8-bugbear
	'C4',     # flake8-comprehensions
	'C90',    # mccabe
	'COM',    # flake8-commas
	'D',      # pydocstyle
	'E',      # pycodestyle errors
	'F',      # Pyflakes
	'FA',     # flake8-future-annotations
	'I',      # isort
	'LOG',    # flake8-logging
	'N',      # pep8-naming
	'PIE',    # flake8-pie
	'PT',     # flake8-pytest-style
	'PYI',    # flake8-pyi
	'Q',      # flake8-quotes
	'RET',    # flake8-return
	'RSE',    # flake8-raise
	'RUF',    # Ruff-specific rules
	'S',      # flake8-bandit
	'SIM',    # flake8-simplify
	'SLF',    # flake8-self
	'UP',     # pyupgrade
	'W',      # pycodestyle warnings
]
ignore = [
	'COM812', # missing-trailing-comma
	'D100',  # Missing docstring in public module
	'D104',  # Missing docstring in public package
	'D203',  # 1 blank line required before class docstring
	'D213',  # Multi-line docstring summary should start at the second line
]

[tool.mypy]
files = ['blacknet/**/*.py', 'runtests.py']
python_version = '3.9'
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
follow_imports = 'silent'
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ['msgpack']
ignore_missing_imports = true
